--- a/banlist.css
+++ b/banlist.css
@@ -140,7 +140,7 @@ tr {
   div.scroll {
     background-color: rgba(30,30,30,.7);
     width: 400px;
-    height: 80vh;
+    height: 900px;
     overflow-x: hidden;
     overflow-y: auto;
     justify-content: center;
@@ -148,12 +148,12 @@ tr {
     left: 50%;
     position: absolute;
     scrollbar-width: none;
-    top: 60%;
+    top: 625px;
     transform: translate(-50%, -50%);
     }
 
     #dropDown {
-      height: 4.5rem;
+      height: 4.5;
       border-radius: 5px;
       background-color: rgb(30, 30, 30);
       border-top: 1px solid var(--g3);
