--- a/banlist.css
+++ b/banlist.css
@@ -147,7 +147,7 @@ tr {
     left: 50%;
     position: absolute;
     scrollbar-width: none;
-    top: 450px;
+    top: 57%;
     transform: translate(-50%, -50%);
     }
 
