--- a/banlist.css
+++ b/banlist.css
@@ -199,8 +199,8 @@ tr {
 
     }
     .cardContainer {
-      position: absolute;
-      top: 150px;
+      position: fixed;
+      top: 15%;
       cursor: pointer;
       transform: translate(-50%, -50%);
     }
