--- a/banlist.css
+++ b/banlist.css
@@ -380,6 +380,11 @@ tr {
           font-size: 24px;
         }
 
+@media all and (max-width: 400px){
+  div.scrollbar{
+    left: -1%;
+  }
+}
 
 @media all and (min-width: 1400px){
   div.scroll {
