--- a/banlist.css
+++ b/banlist.css
@@ -258,7 +258,7 @@ tr {
       font-size: 24px;
     }
 
-  @media all and (max-height: 800px){
+  @media all and (max-height: 600px){
     div.scroll {
         background-color: rgba(30,30,30,.7);
         width: 400px;
@@ -269,7 +269,7 @@ tr {
         position: fixed;
         left: 0%;
         scrollbar-width: none;
-        top: 25%;
+        top: 20%;
         }
 
         #dropDown {
@@ -322,7 +322,7 @@ tr {
         }
         .cardContainer {
           position: fixed;
-          top: 20%;
+          top: 15%;
           cursor: pointer;
           transform: translate(-50%, -50%);
         }
@@ -379,13 +379,12 @@ tr {
           padding-top: 10px;
           font-size: 24px;
         }
-
-@media all and (max-width: 400px){
-  div.scrollbar{
-    left: -1%;
-  }
 }
-
+@media all and (max-width: 400px){
+  div.scroll {
+      left: -2%;
+      }
+      }
 @media all and (min-width: 1400px){
   div.scroll {
     background-color: rgba(30,30,30,.7);
