--- a/banlist.css
+++ b/banlist.css
@@ -134,9 +134,130 @@ tr {
   background-color: var(--g9);
 }
 
+div.scroll {
+  background-color: rgba(30,30,30,.7);
+  width: 400px;
+  height: 70vh;
+  overflow: auto;
+  justify-content: center;
+  align-content: center;
+  position: fixed;
+  left: 0%;
+  scrollbar-width: none;
+  top: 25%;
+  }
+
+  #dropDown {
+    height: 4.5;
+    border-radius: 5px;
+    background-color: rgb(30, 30, 30);
+    border-top: 1px solid var(--g3);
+    border-left: 2px solid var(--g3);
+    border-bottom: 5px solid var(--g4);
+    border-right: 10px solid var(--g4);
+    box-shadow: 0px 0px 50px rgba(0, 0, 255, 0.5), 0px 0px 20px rgba(0, 0, 255, 0.5) inset;
+    }
+  .responsiveIMG {
+    width: 100%;
+    max-width: 50px;
+    height: auto;
+    }
+
+  #discord {
+    padding-top: 10px;
+    padding-left: 10px;
+  }
+
+  .banButton{
+    transform: translate(-50%, -50%);
+    position: absolute;
+    color: white;
+    top: 15%;
+  }
+
+  #card1{
+    left: 17%;
+  }
+
+  #card2 {
+    left: 34%;
+  }
+
+  #card3{
+    left:51%;
+  }
+
+  .card {
+    width: 25px;
+    height: 45px;
+    border-radius: 2px;
+    border: 2px solid rgb(190, 153, 10);
+    background: rgb(150, 67, 21);
+
+  }
+  .cardContainer {
+    position: fixed;
+    top: 15%;
+    cursor: pointer;
+    transform: translate(-50%, -50%);
+  }
+
+  .cardCenter {
+    background: black;
+    border-radius: 50%;
+    width: 13px;
+    height: 26px;
+    left: 30%;
+    position: absolute;
+    backface-visibility: hidden;
+    top: 27%;
+  }
+
+  .crown {
+  top: 35%;
+  left: 20%;
+  box-sizing: border-box;
+  position: absolute;
+  display: block;
+  width: 19px;
+  height: 12px;
+  border: 2px solid;
+  border-top-color: transparent;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+  padding-top: 4px
+}
+.crown::after,
+.crown::before {
+  content: "";
+  display: block;
+  position: absolute;
+  box-sizing: border-box;
+  width: 8px;
+  height: 8px;
+  border-bottom: 2px solid;
+  border-left: 2px solid;
+  transform: rotate(-45deg);
+  top: -4px
+}
+.crown::before {
+  border-top-left-radius: 2px;
+  left: -1px
+}
+.crown::after {
+  border-bottom-right-radius: 2px;
+  right: -1px
+  }
+
+  .num{
+    padding-left: 5px;
+    padding-top: 10px;
+    font-size: 24px;
+  }
 
 
-@media all and (max-width: 1400px){
+
+@media all and (max-width: 1000px){
   div.scroll {
     background-color: rgba(30,30,30,.7);
     width: 400px;
@@ -147,7 +268,7 @@ tr {
     position: fixed;
     left: 0%;
     scrollbar-width: none;
-    top: 20%;
+    top: 25%;
     }
 
     #dropDown {
@@ -257,160 +378,271 @@ tr {
       padding-top: 10px;
       font-size: 24px;
     }
-
-  @media all and (max-height: 600px){
-    div.scroll {
-        background-color: rgba(30,30,30,.7);
-        width: 400px;
-        height: 70vh;
-        overflow: auto;
-        justify-content: center;
-        align-content: center;
-        position: fixed;
-        left: 0%;
-        scrollbar-width: none;
-        top: 25%;
-        }
-
-        #dropDown {
-          height: 4.5;
-          border-radius: 5px;
-          background-color: rgb(30, 30, 30);
-          border-top: 1px solid var(--g3);
-          border-left: 2px solid var(--g3);
-          border-bottom: 5px solid var(--g4);
-          border-right: 10px solid var(--g4);
-          box-shadow: 0px 0px 50px rgba(0, 0, 255, 0.5), 0px 0px 20px rgba(0, 0, 255, 0.5) inset;
-          }
-        .responsiveIMG {
-          width: 100%;
-          max-width: 50px;
-          height: auto;
-          }
-
-        #discord {
-          padding-top: 10px;
-          padding-left: 10px;
-        }
-
-        .banButton{
-          transform: translate(-50%, -50%);
-          position: absolute;
-          color: white;
-          top: 15%;
-        }
-
-        #card1{
-          left: 17%;
-        }
-
-        #card2 {
-          left: 34%;
-        }
-
-        #card3{
-          left:51%;
-        }
-
-        .card {
-          width: 25px;
-          height: 45px;
-          border-radius: 2px;
-          border: 2px solid rgb(190, 153, 10);
-          background: rgb(150, 67, 21);
-
-        }
-        .cardContainer {
-          position: fixed;
-          top: 15%;
-          cursor: pointer;
-          transform: translate(-50%, -50%);
-        }
-
-        .cardCenter {
-          background: black;
-          border-radius: 50%;
-          width: 13px;
-          height: 26px;
-          left: 30%;
-          position: absolute;
-          backface-visibility: hidden;
-          top: 27%;
-        }
-
-        .crown {
-        top: 35%;
-        left: 20%;
-        box-sizing: border-box;
-        position: absolute;
-        display: block;
-        width: 19px;
-        height: 12px;
-        border: 2px solid;
-        border-top-color: transparent;
-        border-bottom-right-radius: 3px;
-        border-bottom-left-radius: 3px;
-        padding-top: 4px
-      }
-      .crown::after,
-      .crown::before {
-        content: "";
-        display: block;
-        position: absolute;
-        box-sizing: border-box;
-        width: 8px;
-        height: 8px;
-        border-bottom: 2px solid;
-        border-left: 2px solid;
-        transform: rotate(-45deg);
-        top: -4px
-    }
-    .crown::before {
-        border-top-left-radius: 2px;
-        left: -1px
-    }
-    .crown::after {
-        border-bottom-right-radius: 2px;
-        right: -1px
-        }
-
-        .num{
-          padding-left: 5px;
-          padding-top: 10px;
-          font-size: 24px;
-        }
 }
-@media all and (max-width: 400px){
+
+@media all and (max-width: 1400px){
   div.scroll {
-      top: 23%;
-      left: -4%;
-      }
-      .cardContainer {
-        position: fixed;
-        top: 18%;
-        cursor: pointer;
-        transform: translate(-50%, -50%);
-      }
+    width: 900px;
+    left: 20%;
     }
+
+  .card {
+    width: 37px;
+    height: 67px;
+    border-radius: 2px;
+    }
+
+  #card1{
+    left: 29%;
+  }
+
+  #card2 {
+    left: 48%;
+  }
+
+  #card3{
+    left:65%;
+  }
+
+  .cardCenter {
+    width: 20px;
+    height: 39px;
+    left: 27%;
+    position: absolute;
+    backface-visibility: hidden;
+    top: 25%;
+  }
+
+  .crown {
+  top: 30%;
+  left: 19%;
+  width: 29px;
+  height: 18px;
+}
+
+.crown::after,
+.crown::before {
+  content: "";
+  width: 12px;
+  height: 12px;
+  top: -8px
+}
+
+.crown::before {
+  border-top-left-radius: 2px;
+  left: -1px
+}
+.crown::after {
+  border-bottom-right-radius: 2px;
+  right: 1px
+  }
+
+  .num{
+    padding-left: 12px;
+    padding-top: 17px;
+    font-size: 24px;
+  }
+}
+
 @media all and (min-width: 1400px){
   div.scroll {
     background-color: rgba(30,30,30,.7);
     width: 1000px;
-    height: 85vh;
-    overflow-x: hidden;
-    overflow-y: auto;
+    height: 70vh;
+    overflow: auto;
     justify-content: center;
     align-content: center;
-    left: 50%;
     position: absolute;
+    left: 25%;
     scrollbar-width: none;
-    top: 53%;
-    transform: translate(-50%, -50%);
+    top: 25%;
     }
 
-  #partialHeader {
-      display: none;
+    #dropDown {
+      height: 4.5;
+      border-radius: 5px;
+      background-color: rgb(30, 30, 30);
+      border-top: 1px solid var(--g3);
+      border-left: 2px solid var(--g3);
+      border-bottom: 5px solid var(--g4);
+      border-right: 10px solid var(--g4);
+      box-shadow: 0px 0px 50px rgba(0, 0, 255, 0.5), 0px 0px 20px rgba(0, 0, 255, 0.5) inset;
       }
+    .responsiveIMG {
+      width: 100%;
+      max-width: 50px;
+      height: auto;
+      }
+
+    #discord {
+      padding-top: 10px;
+      padding-left: 10px;
+    }
+
+    .banButton{
+      transform: translate(-50%, -50%);
+      position: absolute;
+      color: white;
+      top: 15%;
+    }
+
+    #card1{
+      left: 33%;
+    }
+
+    #card2 {
+      left: 51%;
+    }
+
+    #card3{
+      left:68%;
+    }
+
+    .card {
+      width: 50px;
+      height: 90px;
+      border-radius: 4px;
+      border: 4px solid rgb(190, 153, 10);
+      background: rgb(150, 67, 21);
+
+    }
+    .cardContainer {
+      position: fixed;
+      top: 15%;
+      cursor: pointer;
+      transform: translate(-50%, -50%);
+    }
+
+    .cardCenter {
+      background: black;
+      border-radius: 50%;
+      width: 26px;
+      height: 52px;
+      left: 27%;
+      position: absolute;
+      backface-visibility: hidden;
+      top: 25%;
+    }
+
+    .crown {
+    top: 35%;
+    left: 18%;
+    box-sizing: border-box;
+    position: absolute;
+    display: block;
+    width: 38px;
+    height: 24px;
+    border: 2px solid;
+    border-top-color: transparent;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    padding-top: 4px
+  }
+  .crown::after,
+  .crown::before {
+    content: "";
+    display: block;
+    position: absolute;
+    box-sizing: border-box;
+    width: 16px;
+    height: 16px;
+    border-bottom: 2px solid;
+    border-left: 2px solid;
+    transform: rotate(-45deg);
+    top: -10px;
+}
+.crown::before {
+    border-top-left-radius: 4px;
+    left: -1px
+}
+.crown::after {
+    border-bottom-right-radius: 4px;
+    right: -1px
+    }
+
+    .num{
+      padding-left: 14px;
+      padding-top: 15px;
+      font-size: 48px;
+    }
+}
+
+@media all and (max-width: 400px){
+  div.scroll {
+    width: 400px;
+    left: -2%;
+    }
+
+
+    .responsiveIMG {
+      width: 100%;
+      max-width: 50px;
+      height: auto;
+      }
+
+    #discord {
+      padding-top: 10px;
+      padding-left: 10px;
+    }
+
+    #card1{
+      left: 32%;
+    }
+
+    #card2 {
+      left: 50%;
+    }
+
+    #card3{
+      left:68%;
+    }
+
+    .card {
+      width: 25px;
+      height: 45px;
+
+    }
+    .cardContainer {
+      top: 15%
+    }
+
+    .cardCenter {
+      background: black;
+      border-radius: 50%;
+      width: 13px;
+      height: 26px;
+      left: 30%;
+      position: absolute;
+      backface-visibility: hidden;
+      top: 27%;
+    }
+
+    .crown {
+    top: 35%;
+    left: 20%;
+    width: 19px;
+    height: 12px;
+  }
+  .crown::after,
+  .crown::before {
+    width: 8px;
+    height: 8px;
+    top: -4px
+  }
+  .crown::before {
+    border-top-left-radius: 2px;
+    left: -1px
+  }
+  .crown::after {
+    border-bottom-right-radius: 2px;
+    right: -1px
+    }
+
+  .num{
+    padding-left: 5px;
+    padding-top: 10px;
+    font-size: 24px;
+    }
 }
 
 .cardShadow{
